# voxel_engine_prototype

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  flamegraph.sh  link_files_to_release.sh
.github/workflows/: ci.yml
benches/: generation.rs  meshing.rs
config/: bindings.ron  display.ron  game_configs.ron  log-levels.toml
src/: camera_move_system.rs  chunk_per_frame_system.rs  core.rs  destroy_on_touch_system.rs  directions.rs  error.rs  game_config.rs  gameplay_state.rs  lib.rs  log_config.rs  main.rs  ui.rs  voxel_state.rs  voxels.rs  world_change_apply_system.rs
src/ui/: bundle.rs  chunk_counter.rs  current_chunk_info.rs  fps_counter.rs
src/voxels/: bundle.rs  chunk.rs  chunk_mesh.rs  chunk_render.rs  dirty_around_system.rs  generate_map_around_system.rs  materials.rs  mod.rs  resources.rs  systems.rs  terrain_generation.rs  voxel.rs  world.rs
src/voxels/systems/: chunk_per_frame_system.rs  chunk_render.rs  common.rs  components.rs  destroy_on_touch_system.rs  dirty_around_system.rs  generate_map_around_system.rs  materials.rs  world_change_apply_system.rs
