[package]
name = "voxel_engine_prototype"
version = "0.1.0"
authors = ["LokiVKlokeNaAndoke <ma.ba1@rambler.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
rstest = "0.6.4"
criterion = "0.3"

[[bench]]
name = "meshing"
harness = false

[[bench]]
name = "generation"
harness = false

[dependencies]
amethyst = "0.15.1"
bitflags = "1.2.1"
log = "0.4.11"
lazy_static = "1.4.0"
chrono = "0.4.15"
ndarray = "0.13.1"
rand = "0.7.3"
noise = "0.6.0"
flurry = { version = "0.3.0", features = ["rayon"] }
serde = "1.0.115"

[features]
default = ["vulkan"]
vulkan = ["amethyst/vulkan"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
debug = true

[lib]
name = "voxel_engine_prototype_lib"
path = "src/lib.rs"

[[bin]]
name = "voxel_engine_prototype"
path = "src/bin/main.rs"
