[package]
name = "voxel_engine_prototype"
version = "0.1.0"
authors = ["LokiVKlokeNaAndoke <ma.ba1@rambler.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
rstest = "0.6.4"
criterion = "0.3"

[[bench]]
name = "meshing"
harness = false

[[bench]]
name = "generation"
harness = false

[dependencies]
amethyst = { git = "https://github.com/LokiVKlokeNaAndoke/amethyst", branch = "main", features = ["ui"] }
legion = "0.3.1"
bitflags = "1.2.1"
log = "0.4.13"
lazy_static = "1.4.0"
chrono = "0.4.19"
ndarray = "0.14.0"
rand = { version = "0.8.3", features = ["small_rng"] }
noise = "0.7.0"
flurry = { version = "0.3.1", features = ["rayon"] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.6.4"
thiserror = "1.0"
rayon = "1.5.0"
crossbeam = "0.8.0"

[patch.crates-io]
legion = { git = "https://github.com/LokiVKlokeNaAndoke/legion" }

[features]
default = ["vulkan"]
vulkan = ["amethyst/vulkan"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
# lto = "thin"
debug = true

[profile.bench]
# lto = "thin"
debug = true

[lib]
name = "voxel_engine_prototype_lib"
path = "src/lib.rs"

[[bin]]
name = "voxel_engine_prototype"
path = "src/bin/main.rs"
