[package]
name = "voxel_engine_prototype"
version = "0.1.0"
authors = ["LokiVKlokeNaAndoke <ma.ba1@rambler.ru>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
rstest = "0.10.0"
criterion = "0.3"

# [[bench]]
# name = "meshing"
# harness = false

# [[bench]]
# name = "generation"
# harness = false

[dependencies]
bevy = { version = "0.10" , features = ["dynamic_linking"]}
bitflags = "1.2.1"
lazy_static = "1.4.0"
chrono = "0.4.19"
ndarray = "0.15.3"
rand = { version = "0.8.3", features = ["small_rng"] }
noise = "0.7.0"
flurry = { version = "0.3.1", features = ["rayon"] }
serde = { version = "1.0", features = ["derive"] }
ron = "0.6.4"
thiserror = "1.0"
rayon = "1.5.0"
crossbeam = "0.8.0"
toml = "0.5.8"
nalgebra = {version = "0.32", features = ["serde-serialize"]}
num = "0.4"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# [profile.release]
# lto = "thin"
# debug = true

[profile.bench]
# lto = "thin"
debug = true

[lib]
name = "voxel_engine_prototype_lib"
path = "src/lib.rs"

[[bin]]
name = "voxel_engine_prototype"
path = "src/bin/main.rs"
